[tool.poetry]
name = "langchain-sandbox"
version = "0.1.0"
description = ""
authors = ["Chase <cvansteenburg@gmail.com>"]
readme = "README.md"
packages = [
    {include = "src"},
    {include = "datasets"},
    ]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.348"
langserve = {extras = ["all"], version = "^0.0.34"}
openai = "^1.3.7"
python-dotenv = "^1.0.0"
wandb = "^0.16.1"
tiktoken = "^0.5.2"
unstructured = "^0.11.2"
pretty = "^0.1"
pydantic = "^2.5.2"
beautifulsoup4 = "^4.12.2"
markdownify = "^0.11.6"
html5lib = "^1.1"
tomli = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
anyio = "^4.1.0"
time-machine = "^2.13.0"
transformers = "^4.36.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ["datasets/*", "tests/dataset_for_testing/*"]

[[tool.mypy.overrides]]
module = "markdownify.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bs4.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "unstructured.*"
ignore_missing_imports = true
