[tool.poetry]
name = "llmitless"
version = "0.1.0"
description = ""
authors = ["Chase VanSteenburg <cvansteenburg@gmail.com>"]
readme = "README.md"
packages = [
    {include = "src"},
    {include = "datasets"},
    ]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.348"
openai = "^1.3.7"
python-dotenv = "^1.0.0"
tiktoken = "^0.5.2"
pydantic = "^2.5.2"
beautifulsoup4 = "^4.12.2"
markdownify = "^0.11.6"
html5lib = "^1.1"
tomli = "^2.0.1"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.39.2"}


[tool.poetry.group.dev.dependencies]
transformers = "^4.36.2"
mypy = "^1.8.0"
black = "^23.12.1"
pretty = "^0.1"


[tool.poetry.group.test.dependencies]
anyio = "^4.1.0"
pytest = "^7.4.3"
time-machine = "^2.13.0"



[tool.poetry.group.memcheck.dependencies]
memray = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ["datasets/*", "tests/dataset_for_testing/*"]

[[tool.mypy.overrides]]
module = "markdownify.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bs4.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "unstructured.*"
ignore_missing_imports = true

[tool.llmitless.logging]
version = 1

[tool.llmitless.logging.formatters.simple]
format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"

[tool.llmitless.logging.handlers.file_handler]
class = "logging.handlers.TimedRotatingFileHandler"
level = "DEBUG"
formatter = "simple"
filename = "logs/llmitless.log"
when = "D"
interval = 1
backupCount = 7

[tool.llmitless.logging.loggers.llmitless]
level = "DEBUG"
handlers = ["file_handler"]
propagate = true